--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 <body>
 
     <div class="clock-container">
-        <div class="hours">00:</div>
-        <div class="minutes">00:</div>
-        <div class="seconds">00:</div>
-        <div class="pm">pm/am</div>
+        <div class="hours"></div>
+        <div class="minutes"></div>
+        <div class="seconds"></div>
+        <button class="set-alarm">Set Alarm</button>
+        <div class="alarm">Alarm:</div>
     </div>
+   <div class="dropdown">
+        <ul class="hours">
+            
+        </ul>>
+        <ul class="minutes">
 
+        </ul>
+   </div>
     
     <script src="scripts/script.js"></script>
 </body>
